# list_processing

./: .clang-format  CMakeLists.txt  README.org  list_processing-config.cmake.in  sanitizing-cache.cmake
cmake/: list_processing_deps.cmake
list_processing/: CMakeLists.txt  compile_time.hpp  compile_time_alist.hpp  config.cpp  config.hpp.in  dynamic.hpp  dynamic_alist.hpp  dynamic_hash_table.hpp  dynamic_lazy.hpp  dynamic_list.hpp  dynamic_queue.hpp  dynamic_shared_list.hpp  dynamic_stack.hpp  dynamic_stream.hpp  dynamic_tape.hpp  dynamic_tlist.hpp  dynamic_tree.hpp  operators.hpp
list_processing/compile_time/: AList.hpp  Cell.hpp  CellFwd.hpp  Nothing.hpp  Queue.hpp  Stack.hpp  Tape.hpp  Tree.hpp  Zipper.hpp  import.hpp
list_processing/config/: Driver.cpp  Driver.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp
list_processing/dynamic/: AList.hpp  Bucket.hpp  Cell.hpp  Chunk.hpp  ChunkData.hpp  CircularZipper.hpp  HashTable.hpp  Lazy.hpp  List.hpp  List1.hpp  ListFwd.hpp  ListN.hpp  ListOperators.hpp  ListTraits.hpp  Nil.hpp  Queue.hpp  Range.cpp  Range.hpp  ShortList.hpp  Stack.hpp  Stream.hpp  TList.hpp  Tape.hpp  Tree.hpp  Value.hpp  Zipper.hpp  concepts.hpp  import.hpp  piping.hpp
list_processing/dynamic/hash_table/: Bin.hpp  BinHandle.hpp  StorageBranch.hpp  StorageTree.hpp  utility.hpp
list_processing/operators/: ForceGet.hpp  HasData.hpp  HasKey.hpp  IsEmpty.hpp  Map.hpp  MaybeGet.hpp  Pipe.hpp  Remove.hpp  Set.hpp  ToList.hpp  TryGet.hpp  Unset.hpp  collection_operators.hpp  import.hpp  list_operators.hpp  queue_operators.hpp  stack_operators.hpp  tape_operators.hpp
list_processing_testing/: CMakeLists.txt  bucket_test.cpp  compile_time_alist_test.cpp  compile_time_queue_test.cpp  compile_time_stack_test.cpp  compile_time_tape_test.cpp  compile_time_test.cpp  compile_time_tree_test.cpp  compile_time_zipper_test.cpp  dynamic_alist_test.cpp  dynamic_chunk_data_test.cpp  dynamic_hash_table_test.cpp  dynamic_lazy_test.cpp  dynamic_list_test.cpp  dynamic_queue_test.cpp  dynamic_stack_test.cpp  dynamic_stream_test.cpp  dynamic_tape_test.cpp  dynamic_test.cpp  dynamic_tlist_test.cpp  dynamic_tree_test.cpp  dynamic_zipper_test.cpp  range_test.cpp  shared_test.cpp  short_list_test.cpp  static_checks.hpp
scripts/: check-format.sh  format.sh
